[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-playground"
version = "0.0.1"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
lint.ignore = ["D"]
# include all the rules, including new ones
lint.select = ["ALL"]
# Allow fix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []
